测试不同jdk的方法区（永久代、Metaspace）